--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ border-radius: 50%;
 
 .projects{
  z-index:  3;
-  padding: 50px;
+  padding: 20px;
  color: #000000; 
  
  display: flex;
@@ -209,7 +209,7 @@ border-radius: 50%;
     height: 300px;
     cursor: pointer;
     border-radius: 20px ;
-   margin: 20px;
+   margin: 15px 10px;
    
     box-shadow: 7px 6px 5px rgb(185, 185, 185);
     transition: 0.3s ease-in-out;
@@ -293,14 +293,22 @@ border-radius: 50%;
 /* ----------------------------- */ 
 
 
-@media screen and (max-height:780px)   {
+@media screen and (max-height:870px) and (max-width:600px)   {
 
   .main .img img{
-  display: none;
+display: none;
   } 
 }
-
 @media screen and (max-width:600px)   {
+   
+  header{
+    text-align: left;
+display: block;
+padding-left:20px;
+ 
+}
+}
+@media screen and (max-width:900px)   {
  
  
   header{
@@ -317,11 +325,12 @@ padding-left:20px;
     grid-template-columns: 1fr 2fr 2fr 1fr;
     grid-template-rows:  50px 50px 50px 50px ;
  
-   grid-column: 1/8;
+   grid-column: 2/8;
   grid-row:  6;
   }
   .main .img img{
     width: 300px;
+    margin-top: 15px;
     grid-column: 2/3;
     grid-row: 1/5;
  background-color: #ffffff;
@@ -337,6 +346,7 @@ display: none;
  margin-left: 20px;
     grid-row: 3/6;
     grid-column: 1/8;
+     text-align:   center;
   }
 .main .about h1{
   grid-column: 1/3;
@@ -351,7 +361,7 @@ display: none;
     grid-row: 2/3;
    
   }
-  
+
   .projects{
     text-align: left;
     margin: 0 ;
