--- a/projects/pro 2/style.css
+++ b/projects/pro 2/style.css
@@ -86,6 +86,30 @@ background-color: #000000;
  
     }
 
+.content .box1    .background{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scale: 0;
+  width: 52.6%;
+   height: 57%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.651);
+    color: #ffffff;
+    transition: 0.4s ease-in-out;
+}
+.content .box1 iframe {
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.content .box1:hover .background {
+scale: 1;
+
+
+}
 
 .content .box2{
  
