--- a/projects/pro 1/style.css
+++ b/projects/pro 1/style.css
@@ -85,8 +85,7 @@ background-color: #000000;
   
  
     }
-
-
+ 
 .content .box2{
  
 grid-column:  3/5;
@@ -97,6 +96,12 @@ display: flex;
 flex-direction:column;
 justify-content:space-between;
     
+}
+.content .box2 .one{
+    padding: 10px;
+ border-radius: 20px;
+ box-shadow: 5px 5px 9px rgba(78, 78, 78, 0.596);
+
 }
 
 .icon{
